--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "node-dev server.js",
+    "start": "node src/server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.12",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.4"
+    "node-dev": "^7.0.0"
   }
 }
