--- a/package.json
+++ b/package.json
@@ -4,14 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node-dev server.js",
-    "start": "node server.js"
+    "dev": "ts-node-dev src/server.ts",
+    "start": "node server.js",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.4.0",
     "express": "^4.17.1",
-    "socket.io": "^4.1.2"
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.6.0",
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.1.2",
+    "typeorm": "^0.2.34",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "node-dev": "^7.0.0"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.12",
+    "@types/uuid": "^8.3.0",
+    "ts-node-dev": "^1.1.7",
+    "typescript": "^4.3.4"
   }
 }
