--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-transformer": "^0.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.1.2",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.7",
     "typescript": "^4.3.4"
