--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev src/server.ts",
+    "prestart": "npx typeorm migration:run",
     "start": "node dist/server.js",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.1.2",
@@ -26,6 +29,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/nodemailer": "^6.4.2",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.7",
     "typescript": "^4.3.4"
